responsivness to history section and also fixed changes to hamburger and hero section on smaller screens

--- a/src/Styles/Global/hamburger.scss
+++ b/src/Styles/Global/hamburger.scss
@@ -46,4 +46,17 @@
             right: 2.5rem;
         }
     }
+
+    @media screen and (max-width: 425px) {
+        & {
+
+            width: 3rem;
+            height: 3rem;
+
+            div {
+                width: 3rem;
+                height: 0.4rem;
+            }
+        }
+    }
 }
