--- a/src/Styles/Home/hero.scss
+++ b/src/Styles/Home/hero.scss
@@ -1,7 +1,7 @@
 @import '../_global';
 
 .hero {
-    height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
     max-width: 1700px;
     // position: relative;
     display: grid;
@@ -132,7 +132,7 @@
         }
 
         .hero-container {
-            grid-row: 1/2;
+            grid-row: 1/3;
             grid-column: 1;
             display: flex;
             justify-content: center;
@@ -149,25 +149,6 @@
 
             }
         }
-
-        // .next {
-        //     position: absolute;
-        //     bottom: 0;
-        //     right: 50%;
-        //     transform: translate(-50%, -50%);
-
-        //     .next-title {
-        //         font-size: 1rem;
-        //         font-family: $header-font;
-        //         color: $white;
-        //         text-transform: uppercase;
-        //     }
-
-        //     .fontAwesome {
-        //         color: $white;
-        //         font-size: 1rem;
-        //     }
-        // }
     }
 }
 
@@ -176,16 +157,19 @@
 
 
         .hero-container {
+            align-items: center;
+            justify-content: center;
 
             .hero-title {
-                margin-top: -80px;
-                font-size: 5rem; //7.5
+                // margin-top: -80px;
+                margin-top: 0;
+                font-size: 4rem; //7.5
             }
 
             .hero-btn {
-                font-size: 2.5rem;
-                padding: 1.75rem 0; // 3 16
-                width: 310px;
+                font-size: 1.5rem;
+                padding: 1.5rem 0; // 3 16
+                width: 250px;
             }
         }
     }
@@ -196,14 +180,13 @@
         .hero-container {
 
             .hero-title {
-                margin-top: -80px;
-                font-size: 4.5rem; //7.5
+                font-size: 3.5rem; //7.5
             }
 
             .hero-btn {
-                font-size: 2.5rem;
-                padding: 1.75rem 0; // 3 16
-                width: 278px;
+                font-size: 1.5rem;
+                padding: 1.25rem 0; // 3 16
+                width: 215px;
             }
         }
     }
