--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -2,10 +2,10 @@
 
 
 .history {
-    height: 100vh;
+    min-height: 100vh;
     max-width: 1700px;
     display: grid;
-    grid-template-columns: minmax(250px, 1fr) 100px 1fr; // 900px 50px 1fr 300px
+    grid-template-columns: minmax(300px, 1fr) 100px 1fr; // 900px 50px 1fr 300px
     grid-template-rows: 75px 150px 1fr 75px; //100 800 200
     margin: 0 auto;
 
@@ -35,11 +35,17 @@
         grid-column: 3;
         padding: 5rem 7rem 0 7rem;
 
+
         .history-text {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             line-height: 2.5rem;
             letter-spacing: 1px;
             word-wrap: break-word;
+
+            &:nth-child(2) {
+                margin-top: 5rem;
+            }
+
         }
 
         .history-info {
@@ -72,20 +78,94 @@
 }
 
 
-@media screen and (min-width: 1720px) {}
-
-
-@media screen and (max-width: 1048px) {
+@media screen and (min-width: 1720px) {
     .history {
+        .history-title {
+            font-size: 5.5rem;
+        }
+
         .history-container {
-            grid-row: 3;
-            grid-column: 3;
-            padding: 5rem 3rem 0 3rem;
+
+            padding: 5rem 0rem 0 7rem;
+
+            .history-text {
+                font-size: 1.8rem;
+            }
         }
     }
 }
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 1440px) {
+    .history {
+        .history-title {
+            // font-size: 4.5rem;
+
+        }
+
+        .history-container {
+            .history-text {
+                font-size: 1.4rem;
+            }
+
+            .history-info {
+                .container {
+                    .number {
+                        font-size: 2.5rem;
+                    }
+
+                    .text {
+                        font-size: 1.1rem;
+                    }
+
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .history {
+
+        .history-title {
+            font-size: 4.5rem;
+
+        }
+
+        .history-container {
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            padding: 5rem 7rem 0 7rem;
+
+            .history-text {
+                font-size: 1.2rem;
+            }
+
+            .history-info {
+                .container {
+                    .number {
+                        font-size: 2rem;
+                    }
+
+                    .text {
+                        font-size: 1rem;
+                    }
+
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    // .history {
+    //     .history-container {
+    //         grid-row: 3;
+    //         grid-column: 3;
+    //         padding: 5rem 3rem 0 3rem;
+    //     }
+    // }
+}
 
 @media screen and (max-width: 425px) {}
 
