--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -1,10 +1,6 @@
 @import '../_global';
 
-.layout {
-    .hero {
-        height: calc(100vh - 80px);
-    }
-}
+.layout {}
 
 
 
